<resources>

    <!--General-->
    <string name="ok">OK</string>
    <string name="app_name">Kotlin</string>
    <string name="foreground_state">Application go to: FOREGROUND</string>
    <string name="background_state">Application go to: BACKGROUND</string>

    <!--Login screen-->
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_sign_up">Please sign up</string>
    <string name="error_user">User is not found</string>
    <string name="error_unknown">Something went wrong</string>
    <string name="error_empty">Сan\'t be empty</string>
    <string name="error_email">Incorrect email</string>
    <string name="error_password">Сan\'t be shorter then 6 characters</string>

    <!--Sign up screen-->
    <string name="next">Next</string>
    <string name="retry">Retry</string>
    <string name="create">Create</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="error_repeat">Passwords must be identical</string>
    <string name="account_created">Account created!</string>

    <!--Post screen-->
    <string name="long_text">It is winter. The sky is usually gray. The sun is not big. The sun is not warm. The sun is never high in the sky. It\'s always low in the sky. The shadows are long. In the morning they are long. In the afternoon they are long. The shadows are cold. The wind blows. The wind blows almost every day. Sometimes it is a strong wind. Paper blows everywhere. It is always a cold wind. People wear heavy jackets. People stand with their hands in their pockets. People blow on their hands to keep their hands warm. You can see people\'s warm breath. When they breathe, you can see their warm breath. Their breath is like steam from a teapot. Everyone is cold in the winter.</string>

</resources>