<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.kotlinstudy.ui.sign_up.name.viewmodel.SignUpNameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.example.kotlinstudy.ui.view.AppBarView
            android:id="@+id/sign_up_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/sign_up" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeTextInputLayout"
            android:layout_marginBottom="@dimen/sign_up_margin"
            android:hint="@string/email"
            app:errorText="@{viewModel.emailError}"
            app:layout_constraintBottom_toTopOf="@+id/sign_up_first_name_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/ThemeTextInputEditText"
                android:inputType="textEmailAddress"
                android:maxLength="@integer/edit_text_max_length"
                android:onTextChangedObserver="@{viewModel.emailError}"
                android:text="@={viewModel.user.email}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_first_name_layout"
            style="@style/ThemeTextInputLayout"
            android:hint="@string/first_name"
            app:errorText="@{viewModel.firstNameError}"
            app:layout_constraintBottom_toTopOf="@+id/sign_up_next_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_app_bar"
            app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/ThemeTextInputEditText"
                android:inputType="textPersonName"
                android:maxLength="@integer/edit_text_max_length"
                android:onTextChangedObserver="@{viewModel.firstNameError}"
                android:text="@={viewModel.user.firstName}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeTextInputLayout"
            android:layout_marginTop="@dimen/sign_up_margin"
            android:hint="@string/last_name"
            app:errorText="@{viewModel.lastNameError}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_first_name_layout"
            app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/ThemeTextInputEditText"
                android:inputType="textPersonName"
                android:maxLength="@integer/edit_text_max_length"
                android:onActionDoneClick="@{(view) -> viewModel.verifyData()}"
                android:onTextChangedObserver="@{viewModel.lastNameError}"
                android:text="@={viewModel.user.lastName}" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/sign_up_next_btn"
            style="@style/ThemeMainButton"
            android:onClick="@{(view) -> viewModel.verifyData()}"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>