<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.kotlinstudy.ui.sign_up.password.viewmodel.SignUpPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.example.kotlinstudy.ui.view.AppBarView
            android:id="@+id/sign_up_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/sign_up" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeTextInputLayout"
            android:layout_marginBottom="@dimen/sign_up_margin"
            android:hint="@string/password"
            app:counterMaxLength="@integer/password_max_length"
            app:errorText="@{viewModel.passwordError}"
            app:layout_constraintBottom_toTopOf="@+id/sign_up_password_repeat_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/ThemeTextInputEditText"
                android:imeOptions="actionNext"
                android:inputType="numberPassword"
                android:maxLength="@integer/password_max_length"
                android:onTextChangedObserver="@{viewModel.passwordError}"
                android:text="@={viewModel.user.password}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_password_repeat_layout"
            style="@style/ThemeTextInputLayout"
            android:hint="@string/repeat_password"
            app:errorText="@{viewModel.repeatPasswordError}"
            app:layout_constraintBottom_toTopOf="@+id/sign_up_create_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_app_bar"
            app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/ThemeTextInputEditText"
                android:inputType="numberPassword"
                android:maxLength="@integer/edit_text_max_length"
                android:onActionDoneClick="@{(view) -> viewModel.createAccount()}"
                android:onTextChangedObserver="@{viewModel.repeatPasswordError}"
                android:text="@={viewModel.repeatPassword}" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/sign_up_create_btn"
            style="@style/ThemeMainButton"
            android:onClick="@{(view) -> viewModel.createAccount()}"
            android:text="@string/create"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.example.kotlinstudy.ui.view.LoadingView
            android:layout_width="@dimen/zero_dp"
            android:layout_height="@dimen/zero_dp"
            android:visibility="@{viewModel.inProgress}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>