<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.kotlinstudy.ui.login.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeTextInputLayout"
            android:layout_marginBottom="@dimen/login_email_margin_bottom"
            android:hint="@string/email"
            app:errorText="@{viewModel.emailError}"
            app:layout_constraintBottom_toTopOf="@+id/login_password_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/ThemeTextInputEditText"
                android:inputType="textEmailAddress"
                android:maxLength="@integer/edit_text_max_length"
                android:onTextChangedObserver="@{viewModel.emailError}"
                android:text="@={viewModel.email}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_input_layout"
            style="@style/ThemeTextInputLayout"
            android:hint="@string/password"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/password_max_length"
            app:errorText="@{viewModel.passwordError}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/ThemeTextInputEditText"
                android:inputType="numberPassword"
                android:maxLength="@integer/password_max_length"
                android:onActionDoneClick="@{(view) -> viewModel.login()}"
                android:onTextChangedObserver="@{viewModel.passwordError}"
                android:text="@={viewModel.password}" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/login_confirm_btn"
            style="@style/ThemeTextViewSemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_confirm_btn_margin_top"
            android:background="@drawable/selector_blue_round"
            android:onClick="@{(view) -> viewModel.login()}"
            android:paddingStart="@dimen/login_confirm_btn_padding_horizontal"
            android:paddingTop="@dimen/login_confirm_btn_padding_vertical"
            android:paddingEnd="@dimen/login_confirm_btn_padding_horizontal"
            android:paddingBottom="@dimen/login_confirm_btn_padding_vertical"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_password_input_layout" />

        <TextView
            android:id="@+id/login_sign_up_btn"
            style="@style/ThemeTextViewRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_sign_up_btn_margin_top"
            android:background="@drawable/selector_white_round_small"
            android:paddingStart="@dimen/login_sign_up_btn_padding_horizontal"
            android:paddingTop="@dimen/login_sign_up_btn_padding_vertical"
            android:paddingEnd="@dimen/login_sign_up_btn_padding_horizontal"
            android:paddingBottom="@dimen/login_sign_up_btn_padding_vertical"
            android:text="@string/sign_up"
            android:textColor="@color/dodgerBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_confirm_btn" />

        <com.example.kotlinstudy.ui.view.LoadingView
            android:layout_width="@dimen/zero_dp"
            android:layout_height="@dimen/zero_dp"
            android:visibility="@{viewModel.inProgress}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>